<resources>
    <string name="app_name">mooSocial Community</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="login_error_email">Enter a valid email address</string>
    <string name="login_error_password">Password is required</string>
    <string name="login_create_account">No account yet? Create one</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="toolbar_title_home">Home</string>
    <string name="navigation_drawer_opened">Navigation drawer is opened</string>
    <string name="navigation_drawer_closed">Navigation drawer is closed</string>
    <string name="tab_everyone">Everyone</string>
    <string name="tab_friends">Friends &amp; Me</string>
    <string name="action_account">Account</string>
    <string name="action_notifications">Notification</string>
    <string name="action_logout">Logout</string>
    <string name="moo_search_hint">Search...</string>
    <string name="connect_error">No internet connection</string>
    <string name="text_reconnect">Retry</string>
    <string name="search_no_result">No Results Found</string>
    <string name="text_see_all">See All</string>
    <string name="toolbar_title_search">Search</string>
    <string name="text_see_all_results">See All Results</string>
    <string name="text_view_all">View All</string>
    <string name="toolbar_title_signup">Sign Up</string>
    <string name="login_hint_name">Name</string>
    <string name="signup_button_create">Create</string>
    <string name="term_service_text">Terms of Service</string>
    <string name="signup_error_name">Name is required</string>
    <string name="signup_error_term">Term of Service is required</string>
    <string name="signup_title">Create a New Account!</string>
    <string name="signup_gender">Gender</string>
    <string name="signup_gender_male">Male</string>
    <string name="signup_gender_female">Female</string>
    <string name="signup_description">The social network for people with Shared Interests.</string>
    <string name="login_hint_birthday">Birthday</string>
    <string name="signup_error_gender">Gender is required</string>
    <string name="signup_error_birthday">Birthday is required</string>
    <string name="signup_error_disable">Admin has disabled registration on this site</string>
    <string name="signup_error_get_config">Error when load config from server</string>
    <string name="text_setting">Setting</string>
    <string name="toolbar_title_message">Messages</string>
    <string name="text_language">Language</string>
    <string name="text_setting_notification">Notifications</string>
    <string name="login_forgot">Forgot password?</string>
    <string name="text_forgot">Forgot password</string>
    <string name="forgot_button_submit">Submit</string>
    <string name="forgot_text_successful">An email has been sent to the email address that you entered. Please follow the instructions to reset your password. Check your spam folder if you don\'t see it</string>
    <string name="action_mark_as_read">Mark as read</string>
    <string name="action_delete">Delete</string>
    <string name="signup_gender_unknown">Unknown</string>
</resources>
