
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/Widget.MooApp.Toolbar">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="9dp">

        <LinearLayout
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="5dp">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_gravity="fill_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ProgressBar
                    android:id="@+id/forgot_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.Holo.Light.ProgressBar.Large"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    android:visibility="gone"
                    android:layout_gravity="fill_vertical"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:id ="@+id/forgot_successful"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:visibility="gone"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:autoText="false"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_text_successful"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:id ="@+id/forgot_content"
                android:paddingTop="16dp"
                android:layout_height="wrap_content">

                <!--  Email Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/textinputlayout_email"
                    android:paddingTop="8dp"
                    android:layout_height="wrap_content">
                    <EditText android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/login_hint_email" />
                    <TextView
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/email_error_message"
                        android:autoText="false"
                        android:textColor="@color/error_message"
                        android:paddingBottom="8dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:text="@string/forgot_button_submit"
                    android:onClick="forgotAction"
                    android:textColor="@color/signup_button_text_color"
                    android:layout_gravity="right" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>